修改丙級連結

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="all.css">
+    <title>作品首頁</title>
 </head>
 <body>
-    <a href="./丙級/index0.html">丙級練習</a>
+    <a href="./丙級/index0.html" class="title-href">丙級練習</a>
 </body>
 </html>
