--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="all.css">
-    <title>作品首頁</title>
+    <title>Amy Lu作品首頁</title>
 </head>
+
 <body>
-    <a href="./丙級/index0.html" class="title-href">丙級練習</a>
+    <div class="container">
+        <a href="./丙級/index0.html" class="title-href">丙級練習</a>
+    </div>
 </body>
+
 </html>
