--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Play:wght@700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="all.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Amy Lu作品首頁</title>
 </head>
 
 <body>
-    <div class="container">
-        <a href="./丙級/index0.html" class="title-href">丙級練習</a>
-    </div>
+    <h1 data-aos="fade-right" data-aos-duration="800">AMY LU</h1>
+    <ul class="project-list">
+        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="300"><a href="./丙級/index.html" class="project-link" target="_blank">網頁設計<span>丙級</span>        <div class="decoration-line"></div></a>
+
+    </li>
+    </ul>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
