用clamp()控制RWD尺寸

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 </head>
 
 <body>
-    <h1 data-aos="fade-right" data-aos-duration="800">AMY LU</h1>
-    <ul class="project-list">
-        <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="300"><a href="./丙級/index.html" class="project-link" target="_blank">網頁設計<span>丙級</span>        <div class="decoration-line"></div></a>
+    <div class="container">
+        <h1 data-aos="fade-right" data-aos-duration="800">AMY LU</h1>
+        <ul class="project-list">
+            <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="300"><a href="./丙級/index.html"
+                    class="project-link" target="_blank">網頁設計<span>丙級</span>
+                    <div class="decoration-line"></div>
+                </a>
 
-    </li>
-    </ul>
+            </li>
+        </ul>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
