問題修正&新增動畫效果 -nav focus效果改到active class -WORKS title加上動畫 -加上AOS套件動畫

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2 class="about-title display-2 fw-bold text-gray position-sticky text-nowrap">ABOUT ME</h2>
         </div>
         <!-- about文字區塊 -->
-        <div class="container-xxl pt=y-5">
+        <div class="container-xxl overflow-hidden">
           <ul class="exp-list text-md-end">
             <li>
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2003.9-2007.6</span><br><span
