更新個人履歷,技能區塊

--- a/index.html
+++ b/index.html
@@ -85,25 +85,18 @@
         <div class="container-xxl overflow-hidden">
           <ul class="exp-list text-md-end">
             <li>
-              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2003.9-2007.6</span><br><span
-                  class="fs-6">明道大學</span><br>應用日語系</h3>
-              <ul class="exp-item-detail-list text-start">
-                <li data-aos="fade-left">-學習基礎應用日語</li>
-              </ul>
-            </li>
-            <li>
-              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2007.7-2008.7</span><br><span
-                  class="fs-6">遊戲新幹線股份有限公司</span><br>電話客服</h3>
-              <ul class="exp-item-detail-list text-start">
-                <li data-aos="fade-left">-港澳台(國語/粵語)來電客訴處理</li>
-                <li data-aos="fade-left">-線上留言客訴處理</li>
-              </ul>
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2022.9-2023.3</span><br><span
+                  class="fs-6">泰山職業訓練場</span><br>PHP資料庫網頁設計班</h3>
+                  <ul class="exp-item-detail-list text-start"></ul>
             </li>
             <li>
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2008.8-2022.4</span><br><span
-                  class="fs-6">隨身遊戲股份有限公司</span><br>助理PM</h3>
+                  class="fs-6">隨身遊戲股份有限公司</span><br>產品經理</h3>
               <ul class="exp-item-detail-list text-start">
-                <li data-aos="fade-left">-電話/線上客訴處理</li>
+                <li data-aos="fade-left">-負責手機鈴聲業務執行與管理</li>
+                <li data-aos="fade-left">-協助線上影音App維運相關事項</li>
+                <li data-aos="fade-left">-參與麥卡貝網路電視WEB/APP改版規劃</li>
+                <!-- <li data-aos="fade-left">-電話/線上客訴處理</li>
                 <li data-aos="fade-left">-活動贈獎外撥</li>
                 <li data-aos="fade-left">-新手機支援度測試,建立資料及設定服務支援</li>
                 <li data-aos="fade-left">-Feature Phone圖鈴服務維運</li>
@@ -115,12 +108,24 @@
                 <li data-aos="fade-left">-協助遠傳行動電視服務維運</li>
                 <li data-aos="fade-left">-協助頻道上架到GtTV,節目表/行銷活動安排</li>
                 <li data-aos="fade-left">-協助頻道上架到HamiVideo,配合執行行銷活動</li>
-                <li data-aos="fade-left">-麥卡貝網路電視WEB/APP改版初期規劃</li>
+                <li data-aos="fade-left">-麥卡貝網路電視WEB/APP改版初期規劃</li> -->
               </ul>
             </li>
             <li>
-              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2022.9-2023.3</span><br><span
-                  class="fs-6">泰山職訓所</span><br>PHP資料庫網頁設計班</h3>
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2007.7-2008.7</span><br><span
+                  class="fs-6">遊戲新幹線股份有限公司</span><br>電話客服</h3>
+              <ul class="exp-item-detail-list text-start">
+                <li data-aos="fade-left">-負責公司代理遊戲之客訴處理</li>
+                <li data-aos="fade-left">-負責多語系(國語/粵語)客戶關係維護</li>
+                <li data-aos="fade-left">-負責系統會員留言回覆相關事宜</li>
+              </ul>
+            </li>
+            <li>
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2003.9-2007.6</span><br><span
+                  class="fs-6">明道大學</span><br>應用日語系</h3>
+              <ul class="exp-item-detail-list text-start">
+                <li data-aos="fade-left">-取得日本與能力測驗JLPT N1</li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -132,6 +137,36 @@
           <h2 class="skill-title display-2 fw-bold text-gray position-sticky text-nowrap text-center">SKILLS</h2>
         </div>
         <div class="container-xxl pt-5 section-padding-bottom">
+          <div class="skill-list">
+            <div class="list mb-5">
+              <div class="overflow-hidden"><h3 class="skill-item-title">前端開發</h3></div>
+              <ul>
+                <li><img src="./images/HTML.svg" alt="html" class="icon">HTML</li>
+                <li><img src="./images/CSS.svg" alt="css" class="icon">CSS</li>
+                <li><img src="./images/javascript.svg" alt="javascript" class="icon">JavaScript</li>
+                <li><img src="./images/jquery.svg" alt="jQuery" class="icon">jQuery</li>
+                <li><img src="./images/Bootstrap_logo.svg" alt="bootstrap" class="icon">Bootstrap</li>
+              </ul>
+            </div>
+            <div class="list mb-5">
+              <div class="overflow-hidden"><h3 class="skill-item-title">後端技術</h3></div>
+              <ul>
+                <li><img src="./images/php.svg" alt="PHP" class="icon">PHP</li>
+                <li><img src="./images/Laravel-four-icon.png" alt="Laravel" class="icon">Laravel</li>
+                <li><img src="./images/mysql.png" alt="MySQL" class="icon">MySQL</li>
+              </ul>
+            </div>
+            <div class="list mb-5">
+              <div class="overflow-hidden"><h3 class="skill-item-title">影像處理</h3></div>
+              <ul>
+                <li><img src="./images/Adobe_Photoshop_CC_icon.svg" alt="PS" class="icon">Photoshop</li>
+                <li><img src="./images/Adobe_Illustrator_CC_icon.svg" alt="Ai" class="icon">Illustrator</li>
+              </ul>
+            </div>
+
+            </div>
+          </div>
+        <!-- <div class="container-xxl pt-5 section-padding-bottom">
           <h3 class="text-center fs-2 fw-bold text-gray py-3">Technician Skills</h3>
           <ul class="skill-list row">
             <li class="col-md-6 col-12 px-5 py-3">
@@ -281,7 +316,7 @@
                 </div>
             </li>
           </ul>
-        </div>
+        </div> -->
       </section>
       <!-- skill END-->
       <!-- works -->
