[內容調整] -修改作品集投票網站URL

--- a/index.html
+++ b/index.html
@@ -166,157 +166,6 @@
 
             </div>
           </div>
-        <!-- <div class="container-xxl pt-5 section-padding-bottom">
-          <h3 class="text-center fs-2 fw-bold text-gray py-3">Technician Skills</h3>
-          <ul class="skill-list row">
-            <li class="col-md-6 col-12 px-5 py-3">
-              <h4 class="text-center fw-bold py-3">HTML5</h3>
-                <div class="skill-list-item">
-                  <div class="progress">
-                    <div class="progress-bar bg-html" role="progressbar" data-width='80' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-html"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-                </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">CSS3</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-css" role="progressbar" data-width='70' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-css"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">JavaScript</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-js" role="progressbar" data-width='60' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-js"></div>
-                    <div class="skill-list-item-percent text-dark"></div>
-                  </div>
-              </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">PHP</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-php" role="progressbar" data-width='60' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-php"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">SQL</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-css" role="progressbar" data-width='30' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-css"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">Vue.js</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-vue" role="progressbar" data-width='20' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-vue"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3 position-relative">PhotoShop<a type="button" class=""
-                    data-bs-toggle="tooltip" data-bs-placement="right" data-bs-trigger="hover"
-                    data-bs-custom-class="custom-tooltip" data-bs-title="Adobe Certified Associate in CS5">
-                    <i class="fa-solid fa-award ms-1 text-ps"></i>
-                  </a></h3>
-
-                  <div class="progress">
-                    <div class="progress-bar bg-ps" role="progressbar" data-width='90' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-ps"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <div class="skill-list-item">
-                <h4 class="text-center fw-bold py-3">Illustrator</h3>
-                  <div class="progress">
-                    <div class="progress-bar bg-illu" role="progressbar" data-width='70' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-illu"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-              </div>
-            </li>
-          </ul>
-          <h3 class="soft-skill-title text-center fs-2 fw-bold text-gray">Soft Skills</h3>
-          <ul class="skill-list soft row">
-            <li class="col-md-6 col-12 px-5 py-3">
-              <h4 class="text-center fw-bold py-3">CHINESE</h3>
-                <div class="skill-list-item">
-                  <div class="progress">
-                    <div class="progress-bar bg-lang" role="progressbar" data-width='90' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-lang"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-                </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <h4 class="text-center fw-bold py-3 position-relative">JAPANESE<a type="button" class=""
-                  data-bs-toggle="tooltip" data-bs-placement="right" data-bs-trigger="hover"
-                  data-bs-custom-class="custom-tooltip-lang" data-bs-title="Japanese-Language Proficiency Test N1">
-                  <i class="fa-solid fa-award ms-1 text-lang"></i>
-                </a></h3>
-                <div class="skill-list-item">
-                  <div class="progress">
-                    <div class="progress-bar bg-lang" role="progressbar" data-width='70' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-lang"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-                </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <h4 class="text-center fw-bold py-3 position-relative">ENGLISH</h3>
-                <div class="skill-list-item">
-                  <div class="progress">
-                    <div class="progress-bar bg-lang" role="progressbar" data-width='50' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-lang"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-                </div>
-            </li>
-            <li class="col-md-6 col-12 px-5 py-3">
-              <h4 class="text-center fw-bold py-3 position-relative">CANTONESE</h3>
-                <div class="skill-list-item">
-                  <div class="progress">
-                    <div class="progress-bar bg-lang" role="progressbar" data-width='40' aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="skill-list-item-square bg-lang"></div>
-                    <div class="skill-list-item-percent"></div>
-                  </div>
-                </div>
-            </li>
-          </ul>
-        </div> -->
       </section>
       <!-- skill END-->
       <!-- works -->
@@ -329,7 +178,7 @@
           <div class="work-link d-flex flex-wrap justify-content-center align-items-start gap-3">
             <div class="column">
               <div class="card text-bg-dark h-100 overflow-hidden mb-3" data-aos="flip-up">
-                <a href="http://220.128.133.15/s1110420/projectVote/" class="h-100" target="_blank">
+                <a href="https://azmai.tw/" class="h-100" target="_blank">
                 <img src="./images/ProjectVote.png" class="card-img h-100" alt="投票網站">
                 <div class="card-img-overlay d-flex flex-column">
                   <div class="card-text flex-grow-1 text-main p-3">
