[新增功能] 新增英文版 新增中英文切換按鈕,並針對英文內容調整CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_Hant">
 
 <head>
   <meta charset="UTF-8">
@@ -33,7 +33,8 @@
         class="key-view simple-list-item position-relative d-flex justify-content-center align-items-center">
         <div class="key-view-slogan">
           <div class="key-view-animation">
-            <div class="key-view-title-top text-main fs-3">Here's</div>
+            <div class="key-view-title-top text-main fs-3 float-start">Here's</div>
+            <div class="text-main float-end"><a href="#" id="zh" class="text-main">中文</a>|<a href="#" id="en" class="text-main">English</a></div>
           </div>
           <div class="key-view-animation">
             <h2 class="key-view-title fw-bold">AMY LU</h2>
@@ -84,34 +85,44 @@
         <!-- about文字區塊 -->
         <div class="container-xxl overflow-hidden">
           <ul class="exp-list text-md-end">
-            <li>
+            <li lang="en">
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2022.9-2023.3</span><br><span
+                  class="fs-6">TAISHAN Vocational Training Site</span><br>PHP Web database design</h3>
+                  <ul class="exp-item-detail-list text-start"></ul>
+            </li>
+            <li lang="zh">
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2022.9-2023.3</span><br><span
                   class="fs-6">泰山職業訓練場</span><br>PHP資料庫網頁設計班</h3>
                   <ul class="exp-item-detail-list text-start"></ul>
             </li>
-            <li>
+            <li lang="en">
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2008.8-2022.4</span><br><span
+                  class="fs-6">Walkgame Corp</span><br>Product Manager</h3>
+              <ul class="exp-item-detail-list text-start">
+                <li data-aos="fade-left">-executing and managing<br> mobile ringtone product.</li>
+                <li data-aos="fade-left">-Assist with the maintenance of <br>streaming video app.</li>
+                <li data-aos="fade-left">-planning of the redesign for <br>Camerabay.tv's WebSite and App</li>
+              </ul>
+            </li>
+            <li lang="zh">
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2008.8-2022.4</span><br><span
                   class="fs-6">隨身遊戲股份有限公司</span><br>產品經理</h3>
               <ul class="exp-item-detail-list text-start">
                 <li data-aos="fade-left">-負責手機鈴聲業務執行與管理</li>
                 <li data-aos="fade-left">-協助線上影音App維運相關事項</li>
                 <li data-aos="fade-left">-參與麥卡貝網路電視WEB/APP改版規劃</li>
-                <!-- <li data-aos="fade-left">-電話/線上客訴處理</li>
-                <li data-aos="fade-left">-活動贈獎外撥</li>
-                <li data-aos="fade-left">-新手機支援度測試,建立資料及設定服務支援</li>
-                <li data-aos="fade-left">-Feature Phone圖鈴服務維運</li>
-                <li data-aos="fade-left">-Fun電鈴聲館/Fun流行音樂館 APP服務維運</li>
-                <li data-aos="fade-left">-遠傳點唱機/Music Go! APP服務維運</li>
-                <li data-aos="fade-left">-亞太搜電影SoMovie APP服務維運</li>
-                <li data-aos="fade-left">-金流代收服務服務維運</li>
-                <li data-aos="fade-left">-FB粉絲團發文維護</li>
-                <li data-aos="fade-left">-協助遠傳行動電視服務維運</li>
-                <li data-aos="fade-left">-協助頻道上架到GtTV,節目表/行銷活動安排</li>
-                <li data-aos="fade-left">-協助頻道上架到HamiVideo,配合執行行銷活動</li>
-                <li data-aos="fade-left">-麥卡貝網路電視WEB/APP改版初期規劃</li> -->
               </ul>
             </li>
-            <li>
+            <li lang="en">
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2007.7-2008.7</span><br><span
+                  class="fs-6">	Game Flier International Corp</span><br>customer service</h3>
+              <ul class="exp-item-detail-list text-start">
+                <li data-aos="fade-left">-handle customer complaints</li>
+                <li data-aos="fade-left">-Multilingual (Mandarin/Cantonese) <br>customer relationship management.</li>
+                <li data-aos="fade-left">-Responsible for<br> handling system member messages</li>
+              </ul>
+            </li>
+            <li lang="zh">
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2007.7-2008.7</span><br><span
                   class="fs-6">遊戲新幹線股份有限公司</span><br>電話客服</h3>
               <ul class="exp-item-detail-list text-start">
@@ -120,7 +131,15 @@
                 <li data-aos="fade-left">-負責系統會員留言回覆相關事宜</li>
               </ul>
             </li>
-            <li>
+            <li lang="en">
+              <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2003.9-2007.6</span><br><span
+                  class="fs-6">MINGDAO UNIVERSITY</span><br><span
+                  class="fs-3">Department of</span><br>Applied Japanese</h3>
+              <ul class="exp-item-detail-list text-start">
+                <li data-aos="fade-left">-Passing the Japanese Language Proficiency Test N1</li>
+              </ul>
+            </li>
+            <li lang="zh">
               <h3 class="exp-item-title fs-3 fw-bold"><span class="fs-6">2003.9-2007.6</span><br><span
                   class="fs-6">明道大學</span><br>應用日語系</h3>
               <ul class="exp-item-detail-list text-start">
@@ -139,7 +158,10 @@
         <div class="container-xxl pt-5 section-padding-bottom">
           <div class="skill-list">
             <div class="list mb-5">
-              <div class="overflow-hidden"><h3 class="skill-item-title">前端開發</h3></div>
+              <div class="overflow-hidden">
+                <h3 class="skill-item-title" lang="en">Front-End</h3>
+                <h3 class="skill-item-title" lang="zh">前端開發</h3>
+              </div>
               <ul>
                 <li><img src="./images/HTML.svg" alt="html" class="icon">HTML</li>
                 <li><img src="./images/CSS.svg" alt="css" class="icon">CSS</li>
@@ -149,7 +171,10 @@
               </ul>
             </div>
             <div class="list mb-5">
-              <div class="overflow-hidden"><h3 class="skill-item-title">後端技術</h3></div>
+              <div class="overflow-hidden">
+                <h3 class="skill-item-title" lang="en">Back-End</h3>
+                <h3 class="skill-item-title" lang="zh">後端技術</h3>
+              </div>
               <ul>
                 <li><img src="./images/php.svg" alt="PHP" class="icon">PHP</li>
                 <li><img src="./images/Laravel-four-icon.png" alt="Laravel" class="icon">Laravel</li>
@@ -157,7 +182,10 @@
               </ul>
             </div>
             <div class="list mb-5">
-              <div class="overflow-hidden"><h3 class="skill-item-title">影像處理</h3></div>
+              <div class="overflow-hidden">
+                <h3 class="skill-item-title" lang="en">Graphic design</h3>
+                <h3 class="skill-item-title" lang="zh">影像處理</h3>
+              </div>
               <ul>
                 <li><img src="./images/Adobe_Photoshop_CC_icon.svg" alt="PS" class="icon">Photoshop</li>
                 <li><img src="./images/Adobe_Illustrator_CC_icon.svg" alt="Ai" class="icon">Illustrator</li>
@@ -187,9 +215,11 @@
                     <span class="badge text-bg-php">php</span>
                     <span class="badge text-bg-js text-dark">JavaScript</span>
                     <i class="fa-solid fa-arrow-up-right-from-square fs-1 float-end"></i>
-                    <p class="py-3">結合前後端技術及資料庫CRUD網站</p>
+                    <p class="py-3" lang="en">Full-stack with MySQL web Site</p>
+                    <p class="py-3" lang="zh">結合前後端技術及資料庫CRUD網站</p>
                   </div>
-                    <h5 class="card-title px-2 text-main fw-bold fs-4">投票網站</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="en">dynamic website</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="zh">投票網站</h5>
                 </div>
               </a>
               </div>
@@ -201,9 +231,11 @@
                     <span class="badge text-bg-html">HTML</span>
                     <span class="badge text-bg-css">CSS</span>
                     <i class="fa-solid fa-arrow-up-right-from-square fs-1 float-end"></i>
-                    <p class="py-3">多頁靜態RWD網站(Bootstrap)</p>
+                    <p class="py-3" lang="en">static website(Bootstrap)</p>
+                    <p class="py-3" lang="zh">多頁靜態RWD網站(Bootstrap)</p>
                   </div>
-                    <h5 class="card-title px-2 text-main fw-bold fs-4">靜態網站切版</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="en">static website(Bootstrap)</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="zh">靜態網站切版</h5>
                 </div>
               </a>
               </div>
@@ -218,9 +250,11 @@
                     <span class="badge text-bg-css">CSS</span>
                     <span class="badge text-bg-php">php</span>
                     <i class="fa-solid fa-arrow-up-right-from-square fs-1 float-end"></i>
-                    <p class="py-3">以PHP製作的萬年曆</p>
+                    <p class="py-3" lang="en">PHP calendar</p>
+                    <p class="py-3" lang="zh">以PHP製作的萬年曆</p>
                   </div>
-                    <h5 class="card-title px-2 text-main fw-bold fs-4">萬年曆</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="en">calendar</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="zh">萬年曆</h5>
                 </div>
               </a>
               </div>
@@ -232,9 +266,11 @@
                     <span class="badge text-bg-html">HTML</span>
                     <span class="badge text-bg-css">CSS</span>
                     <i class="fa-solid fa-arrow-up-right-from-square fs-1 float-end"></i>
-                    <p class="py-3">多頁靜態RWD網站</p>
+                    <p class="py-3" lang="en">static website</p>
+                    <p class="py-3" lang="zh">多頁靜態RWD網站</p>
                   </div>
-                    <h5 class="card-title px-2 text-main fw-bold fs-4">靜態網站切版</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="en">static website</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="zh">靜態網站切版</h5>
                 </div>
               </a>
               </div>
@@ -249,9 +285,11 @@
                     <span class="badge text-bg-css">CSS</span>
                     <span class="badge text-bg-js text-dark">JavaScript</span>
                     <i class="fa-solid fa-arrow-up-right-from-square fs-1 float-end"></i>
-                    <p class="py-3">靜態商品介紹網頁(Bootstrap)</p>
+                    <p class="py-3" lang="en">static single webpage for product promo(Bootstrap)</p>
+                    <p class="py-3" lang="zh">一頁式商品介紹(Bootstrap)</p>
                   </div>
-                    <h5 class="card-title px-2 text-main fw-bold fs-4">靜態網站切版</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="en">static website</h5>
+                    <h5 class="card-title px-2 text-main fw-bold fs-4" lang="zh">一頁式商品介紹</h5>
                 </div>
               </a>
               </div>
